# shstats

./: .gitignore  .travis.install.sh  .travis.script.sh  Makefile  README.org  doit  run  run-test  shstats.opam  typestat
corpus-assignment/: .gitignore  assign-command.sh  assign-function  assign-nonspecial  complex.sh  function-in-function  function.sh  function1.sh  local-variable  local.sh  variable-call.sh  variable-call1.sh  words.sh
share/: specification.org
src/: .header  .merlin  Makefile  _tags  analyzer.ml  commands.ml  commands.mli  counter.mli  counters.ml  counters.mli  expander.ml  expander.mli  extPervasives.ml  jbuild  messages.ml  moreCSTHelpers.ml  moreCSTHelpers.mli  options.ml  org.ml  progress.ml  report.ml  report.mli  shell.ml  shstats.ml  unQuote.ml
test-expansion/: .gitignore  assignment-before-function.sh  assignment-before-function.sh.expected  assignment-before-special-buildin.sh  assignment-before-special-buildin.sh.expected  assignment-before-unknown-cmd.sh  assignment-before-unknown-cmd.sh.expected  assignment-inside-simple-cmd-function.sh  assignment-inside-simple-cmd-function.sh.expected  assignment-inside-simple-cmd-process.sh  assignment-inside-simple-cmd-process.sh.expected  condition-noelse.sh  condition-noelse.sh.expected  condition.sh  condition.sh.expected  conditional.sh  conditional.sh.expected  function.sh  function.sh.expected  multiple-sameline.sh  multiple-sameline.sh.expected  read.sh  read.sh.expected  sequential.sh  sequential.sh.expected  simple.sh  simple.sh.expected  while.sh  while.sh.expected
(+26 files in other folders)
