opam-version: "1.2"

name: "shstats"
version: "0.1"

maintainer: "Nicolas Jeannerod <nicolas.jeannerod@irif.fr>"
authors: [
  "Nicolas Jeannerod <nicolas.jeannerod@irif.fr>"
  "Ralf Treinen <ralf.treinen@irif.fr>"
  "Yann Régis-Gianas <yann.regis-gianas@irif.fr"
]
license: "LGPL3"

homepage: "https://github.com/colis-anr/shstats"
bug-reports: "https://github.com/colis-anr/shstats/issues"
dev-repo: "git://github.com/colis-anr/shstats.git"

build: ["make"]
depends: [
  "morbig"
]
